# workspace

./: .gitignore  .readthedocs.yaml  404.html  README.md  eoepca-demo.env  index.html  main.py  meetings.md  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: chart.yml  docs.yml  helm.yml
admin/configuration/: index.html
admin/maintenance/: index.html
api/endpoint-specification/: index.html
api/usage/: index.html
api/workspace/: index.html
dependencies/: flux-oci-to-helm-chart.sh  flux-oci-to-helm.sh  input.yaml
design/architecture/: index.html
design/iam-concept/: index.html
design/iam-integration/: index.html
design/more-design/: index.html
design/motivation/: index.html
design/operational-controls/: index.html
design/overview/: index.html
design/vcluster/: index.html
docs/: index.md  requirements.txt
docs/api/: workspace.md
docs/design/: architecture.md  iam-concept.md  iam-integration.md  motivation.md  operational-controls.md  overview.md  vcluster.md
docs/getting-started/: concepts.md  operator-view.ipynb  quickstart.md  user-view.ipynb
docs/usage/: howtos.md
examples/: users.yaml
pipeline/: .helmignore  Chart.yaml  configuration-datalab.yaml  configuration-storage.yaml  create-helm-chart.sh  environmentconfig.yaml  values.yaml
search/: search_index.json
setup/: admin.yaml  examples.yaml  tests.yaml  users.yaml  workspace-1.yaml  workspace-2.yaml  ws-team1.yaml  ws-team2.yaml  ws-team3.yaml  ws-user.yaml
storagelayer-API/: README.md  openapi.yaml
v2/: composition.yaml  xrd.yaml
(+65 files in other folders)
